welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
while (true){
^Poucet:9: error: ')' expected but '<-' found.
if (biscuit <- 2){droite()}{else{gauche()}} 
            ^Poucet:11: error: illegal start of simple expression
	}
        ^